--- a/homework_24/package.json
+++ b/homework_24/package.json
@@ -48,6 +48,9 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
-    "core-js": "^3.6.4"
+    "body-parser": "^1.19.0",
+    "core-js": "^3.6.4",
+    "ejs": "^3.0.1",
+    "express": "^4.17.1"
   }
 }
